adding tags and definitions to swagger.js, adding swagger tags on toolsControllers
