# swagger_output.json
@@ -2,53 +2,64 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "VUTTR API",
+    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:3000",
+  "host": "localhost:8080",
   "basePath": "/",
+  "tags": [
+    {
+      "name": "Tools",
+      "description": "Endpoints"
+    }
+  ],
   "schemes": [
-    "http"
+    "http",
+    "https"
+  ],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
   ],
   "paths": {
     "/vuttr/tools": {
       "get": {
-        "description": "",
+        "tags": [
+          "Tools"
+        ],
+        "description": "Endpoint para obter as ferramentas",
         "parameters": [
           {
             "name": "tag",
             "in": "query",
+            "description": "Um tag qualquer.",
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Ferramentas encontradas.",
+            "schema": {
+              "$ref": "#/definitions/Tools"
+            }
           }
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Tools"
+        ],
+        "description": "Endpoint para adicionar uma ferramenta.",
         "parameters": [
           {
-            "name": "body",
+            "name": "newTool",
             "in": "body",
+            "description": "Informações da ferramenta",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "title": {
-                  "example": "any"
-                },
-                "link": {
-                  "example": "any"
-                },
-                "description": {
-                  "example": "any"
-                },
-                "tags": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/AddTool"
             }
           }
         ],
@@ -73,9 +84,92 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "201": {
+            "description": "Ferramenta registrada com sucesso!"
           }
         }
       }
+    }
+  },
+  "definitions": {
+    "Tools": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 0
+        },
+        "title": {
+          "type": "string",
+          "example": "Notion"
+        },
+        "link": {
+          "type": "string",
+          "example": "https://notion.so"
+        },
+        "description": {
+          "type": "string",
+          "example": "All in one tool to organize teams and ideas. Write, plan, collaborate, and get organized."
+        },
+        "tags": {
+          "type": "array",
+          "example": [
+            "organization",
+            "planning",
+            "collaboration",
+            "writing",
+            "calendar"
+          ],
+          "items": {
+            "type": "string"
+          }
+        }
+      },
+      "required": [
+        "title",
+        "link",
+        "description",
+        "tags"
+      ]
+    },
+    "AddTool": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string",
+          "example": "hotel"
+        },
+        "link": {
+          "type": "string",
+          "example": "https://github.com/typicode/hotel"
+        },
+        "description": {
+          "type": "string",
+          "example": "Local app manager. Start apps within your browser, developer tool with local .localhost domain and https out of the box."
+        },
+        "tags": {
+          "type": "array",
+          "example": [
+            "node",
+            "organizing",
+            "webapps",
+            "domain",
+            "developer",
+            "https",
+            "proxy"
+          ],
+          "items": {
+            "type": "string"
+          }
+        }
+      },
+      "required": [
+        "title",
+        "link",
+        "description",
+        "tags"
+      ]
     }
   }
 }
